--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../dest/assets/css/destyle.css">
   <link rel="stylesheet" href="../dest/assets/css/style.css">
-  <title>Circle</title>
+  <title>ParticleCircle2D</title>
 </head>
 
 <body>
